--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "twitter-lite": "^0.9.4"
   },
   "devDependencies": {
+    "aws-sdk": "^2.637.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -33,5 +34,8 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
