--- a/api/package.json
+++ b/api/package.json
@@ -10,10 +10,10 @@
   "author": "Kevin Chhay <25449974+Mirakurun@users.noreply.github.com>",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/connect-firestore": "^1.0.6",
-    "@google-cloud/firestore": "^3.5.1",
+    "connect-mongodb-session": "^2.3.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "mongoose": "^5.9.4",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
     "serverless-http": "^2.3.2",
