--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,8 @@
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "endOfLine": "auto"
   },
   "engines": {
     "node": ">=12.0.0"
