--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongodb-session": "^2.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
