--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@quasar/extras": "^1.5.2",
     "axios": "^0.19.2",
-    "quasar": "^1.9.6"
+    "quasar": "^1.9.6",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@quasar/app": "^1.6.0",
