--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.6.1",
+    "@quasar/extras": "^1.6.4",
     "axios": "^0.19.2",
-    "quasar": "^1.9.12",
+    "date-fns": "^2.12.0",
+    "quasar": "^1.9.15",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
-    "@quasar/app": "^1.6.0",
+    "@quasar/app": "^1.7.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
