--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
     "quasar": "^1.9.15",
+    "twitter-text": "^3.1.0",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
