--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.12.0",
     "quasar": "^1.9.15",
     "twitter-text": "^3.1.0",
+    "vue-gtag": "^1.6.2",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
