--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-.DS_Store
-.thumbs.db
+# Package directories
 node_modules
-.env
+jspm_packages
+
+# Project directories
 api/credentials/*
 api/emotes
-api/config/config.js
-thumbs.db
 src/statics/images/emotes/*
+
+# Serverless directories
+.serverless
 
 # Quasar core related directories
 .quasar
@@ -37,3 +39,7 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+.DS_Store
+.thumbs.db
+.env
+thumbs.db
