--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "serverless-dotenv-plugin": "^2.4.2"
   },
   "prettier": {
     "singleQuote": true,
