chore: update serverless template

--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -66,6 +66,8 @@ provider:
 package:
   exclude:
     - tests/**
+    - emotes/**
+    - credentials/**
     - .env
     - .eslintrc.js
     - .prettierrc
