closes #32; fix: upload emote in prod

--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -31,7 +31,18 @@ provider:
   apiName: emoting-mokou-api
   apiGateway:
     binaryMediaTypes:
-      - '*/*'
+      - "*/*"
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "s3:PutObject"
+        - "s3:PutObjectAcl"
+      Resource:
+       Fn::Join:
+         - ""
+         - - "arn:aws:s3:::"
+           - ${env:BUCKET}
+           - "/*"
 
 # you can overwrite defaults here
 #  stage: dev
