--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
+    "helmet": "^3.22.0",
     "mongoose": "^5.9.4",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
