--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Mirakurun <25449974+Mirakurun@users.noreply.github.com>",
   "private": true,
   "scripts": {
+    "build": "quasar build",
     "lint": "eslint --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0"
   },
