--- a/.github/workflows/api-cd.yml
+++ b/.github/workflows/api-cd.yml
@@ -8,6 +8,8 @@ on:
       - 'api/**'
       - '!api/.eslintrc.js'
       - '!api/server.js'
+      - '!api/package-lock.json'
+      - '!api/package.json'
 
 jobs:
   deploy:
@@ -31,8 +33,8 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY
+        run: npm run config
       - name: Package
-        run: serverless package
+        run: npm run package
       - name: Deploy package
-        run: serverless deploy --package .serverless
+        run: npm run deploy
