--- a/.github/workflows/spa-cd.yml
+++ b/.github/workflows/spa-cd.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy
         env:
           BUCKET: ${{ secrets.BUCKET }}
-        run: aws s3 sync ./dist/spa s3://$BUCKET --delete --exclude 'statics/images/emotes/*' --exclude 'robots.txt'
+        run: aws s3 sync ./dist/spa s3://$BUCKET --acl public-read --delete --exclude 'statics/images/emotes/*' --exclude 'robots.txt'
       - name: Invalidate CloudFront Cache
         env:
           DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
