--- a/.github/workflows/api-cd.yml
+++ b/.github/workflows/api-cd.yml
@@ -37,7 +37,7 @@ jobs:
           SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
           BUCKET: ${{ secrets.BUCKET }}
           KEYPREFIX: ${{ secrets.KEYPREFIX }}
-          REGION: ${{ secrets.REGION }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           DB_URI: ${{ secrets.DB_URI }}
           DB_NAME: ${{ secrets.DB_NAME }}
           HOST: ${{ secrets.HOST }}
