--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -101,7 +101,7 @@ functions:
       SESSION_SECRET: ${env:SESSION_SECRET}
       BUCKET: ${env:BUCKET}
       KEYPREFIX: ${env:KEYPREFIX}
-      REGION: ${env:REGION}
+      AWS_DEFAULT_REGION: ${env:AWS_DEFAULT_REGION}
       DB_URI: ${env:DB_URI}
       DB_NAME: ${env:DB_NAME}
       HOST: ${env:HOST}
