--- a/.github/workflows/api-cd.yml
+++ b/.github/workflows/api-cd.yml
@@ -13,9 +13,6 @@ jobs:
   deploy:
     name: Deploy API
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./api
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -25,6 +22,9 @@ jobs:
           node-version: '12.x'
       - name: Install dependencies
         run: npm ci
+        working-directory: ./api
+      - name: Change directory to api
+        run: cd api
       - name: Serverless deploy
         uses: serverless/github-action@master
         with:
