--- a/.github/workflows/api-cd.yml
+++ b/.github/workflows/api-cd.yml
@@ -13,6 +13,22 @@ jobs:
   deploy:
     name: Deploy API
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+      CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+      SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+      BUCKET: ${{ secrets.BUCKET }}
+      KEYPREFIX: ${{ secrets.KEYPREFIX }}
+      DB_URI: ${{ secrets.DB_URI }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      HOST: ${{ secrets.HOST }}
+      CLIENT_PORT: ${{ secrets.CLIENT_PORT }}
+    default:
+      run:
+        working-directory: ./api
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -22,24 +38,11 @@ jobs:
           node-version: '12.x'
       - name: Install dependencies
         run: npm ci
-        working-directory: ./api
-      - name: Change directory to api
-        run: cd api
+      - mame: Install serverless framework
+        run: npm install serverless
+      - name: Serverless config credentials
+        run: npm run config
+      - name: Serverless package
+        run: npm run package
       - name: Serverless deploy
-        uses: serverless/github-action@master
-        with:
-          args: deploy
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
-          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
-          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
-          BUCKET: ${{ secrets.BUCKET }}
-          KEYPREFIX: ${{ secrets.KEYPREFIX }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          DB_URI: ${{ secrets.DB_URI }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          HOST: ${{ secrets.HOST }}
-          CLIENT_PORT: ${{ secrets.CLIENT_PORT }}
-          NODE_ENV: ${{ secrets.NODE_ENV }}
+        run: npm run deploy
