--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "config": "serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY",
+    "package": "serverless package",
+    "deploy": "serverless deploy --CONSUMER_KEY $CONSUMER_KEY --CONSUMER_SECRET $CONSUMER_SECRET --SESSION_SECRET $SESSION_SECRET --BUCKET $BUCKET --KEYPREFIX $KEYPREFIX --AWS_DEFAULT_REGION $AWS_DEFAULT_REGION --DB_URI $DB_URI --DB_NAME $DB_NAME --HOST $HOST --CLIENT_PORT $CLIENT_PORT --package .serverless"
   },
   "author": "Kevin Chhay <25449974+Mirakurun@users.noreply.github.com>",
   "license": "ISC",
