--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js",
     "config": "serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY",
     "package": "serverless package",
-    "deploy": "serverless deploy --CONSUMER_KEY $CONSUMER_KEY --CONSUMER_SECRET $CONSUMER_SECRET --SESSION_SECRET $SESSION_SECRET --BUCKET $BUCKET --KEYPREFIX $KEYPREFIX --AWS_DEFAULT_REGION $AWS_DEFAULT_REGION --DB_URI $DB_URI --DB_NAME $DB_NAME --HOST $HOST --CLIENT_PORT $CLIENT_PORT --package .serverless"
+    "deploy": "serverless deploy --package .serverless"
   },
   "author": "Kevin Chhay <25449974+Mirakurun@users.noreply.github.com>",
   "license": "ISC",
@@ -36,8 +36,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "serverless-dotenv-plugin": "^2.4.2"
+    "prettier": "^1.19.1"
   },
   "prettier": {
     "singleQuote": true,
