--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "helmet": "^3.22.0",
+    "mime-types": "^2.1.27",
     "mongoose": "^5.9.4",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
