--- a/.github/workflows/spa-cd.yml
+++ b/.github/workflows/spa-cd.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Deploy
         env:
           BUCKET: ${{ secrets.BUCKET }}
-        run: aws s3 sync ./dist/spa s3://$BUCKET --acl public-read --delete --exclude 'images/emotes/*'
+        run: aws s3 sync ./dist/spa s3://$BUCKET --delete --exclude 'images/emotes/*'
       - name: Invalidate CloudFront Cache
         env:
           DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
